// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "./proto";
package datacommons.v1;

import "entity.proto";


// Full lists of in and out types for a given node ID and property.
message PropertyTypes {
  repeated string in_types = 1;
  repeated string out_types = 2;
}

message PropertyValuesRequest {
  string node_property = 1;
  // [Optional]
  // The limit of number of values per type. If not specified, the default limit is 500.
  int32 limit = 3;
  // [Optional]
  // The pagination token for getting the next set of entries. This is empty
  // for the first request and needs to be set in the subsequent request.
  // This is the value returned from a prior call to PropertyValuesRequest
  string next_token = 4;
  // Direction can only be "in" and "out"
  string direction = 5;
}

message PropertyValuesResponse {
  repeated datacommons.EntityInfo values = 1;
  // The pagination token for getting the next set of entries.
  string next_token = 2;
}


message BulkPropertyValuesRequest {
  string property = 1;
  repeated string nodes = 2;
  // [Optional]
  // The limit of number of values per type. If not specified, the default limit is 500.
  // This limit is applied for each node, instead of the bulk result.
  int32 limit = 3;
  // [Optional]
  // The pagination token for getting the next set of entries. This is empty
  // for the first request and needs to be set in the subsequent request.
  // This is the value returned from a prior call to PropertyValuesResponse
  string next_token = 4;
  // Direction can only be "in" and "out"
  string direction = 5;
}

message BulkPropertyValuesResponse {
  message NodePropertyValues {
    string node = 1;
    repeated datacommons.EntityInfo values = 2;
  }
  repeated NodePropertyValues data = 1;
  // The pagination token for getting the next set of entries.
  string next_token = 2;
}


// Note this API request only supports property "containedInPlace" now.
// This is effectively used to query containing places for certain type.
message LinkedPropertyValuesRequest {
  string node_property = 1;
  string value_node_type = 3;
}

// Note this API request only supports property "containedInPlace" now.
// This is effectively used to query containing places for certain type.
message BulkLinkedPropertyValuesRequest {
  string property = 1;
  repeated string nodes = 2;
  string value_node_type = 3;
}